--- a/frontend/resources/styles/common/refactor/themes/hljs-light-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/hljs-light-theme.scss
@@ -1,94 +1,126 @@
-/**
- * Panda Syntax Theme for Highlight.js
- * Based on: https://github.com/tinkertrain/panda-syntax-vscode
- * Author: Annmarie Switzer <https://github.com/annmarie-switzer>
- */
+/*!
+  Theme: GitHub
+  Description: Light theme as seen on github.com
+  Author: github.com
+  Maintainer: @Hirse
+  Updated: 2021-05-15
+
+  Outdated base version: https://github.com/primer/github-syntax-light
+  Current colors taken from GitHub's CSS
+*/
 
 .hljs {
-  color: #2a2c2d;
-  background: #e6e6e6;
+  color: #24292e;
+  background: #ffffff;
+}
+
+.hljs-doctag,
+.hljs-keyword,
+.hljs-meta .hljs-keyword,
+.hljs-template-tag,
+.hljs-template-variable,
+.hljs-type,
+.hljs-variable.language_ {
+  /* prettylights-syntax-keyword */
+  color: #d73a49;
+}
+
+.hljs-title,
+.hljs-title.class_,
+.hljs-title.class_.inherited__,
+.hljs-title.function_ {
+  /* prettylights-syntax-entity */
+  color: #6f42c1;
+}
+
+.hljs-attr,
+.hljs-attribute,
+.hljs-literal,
+.hljs-meta,
+.hljs-number,
+.hljs-operator,
+.hljs-variable,
+.hljs-selector-attr,
+.hljs-selector-class,
+.hljs-selector-id {
+  /* prettylights-syntax-constant */
+  color: #005cc5;
+}
+
+.hljs-regexp,
+.hljs-string,
+.hljs-meta .hljs-string {
+  /* prettylights-syntax-string */
+  color: #032f62;
+}
+
+.hljs-built_in,
+.hljs-symbol {
+  /* prettylights-syntax-variable */
+  color: #e36209;
+}
+
+.hljs-comment,
+.hljs-code,
+.hljs-formula {
+  /* prettylights-syntax-comment */
+  color: #6a737d;
+}
+
+.hljs-name,
+.hljs-quote,
+.hljs-selector-tag,
+.hljs-selector-pseudo {
+  /* prettylights-syntax-entity-tag */
+  color: #22863a;
+}
+
+.hljs-subst {
+  /* prettylights-syntax-storage-modifier-import */
+  color: #24292e;
+}
+
+.hljs-section {
+  /* prettylights-syntax-markup-heading */
+  color: #005cc5;
+  font-weight: bold;
+}
+
+.hljs-bullet {
+  /* prettylights-syntax-markup-list */
+  color: #735c0f;
 }
 
 .hljs-emphasis {
+  /* prettylights-syntax-markup-italic */
+  color: #24292e;
   font-style: italic;
 }
 
 .hljs-strong {
+  /* prettylights-syntax-markup-bold */
+  color: #24292e;
   font-weight: bold;
 }
 
-.hljs-link {
-  text-decoration: underline;
+.hljs-addition {
+  /* prettylights-syntax-markup-inserted */
+  color: #22863a;
+  background-color: #f0fff4;
 }
 
-.hljs-comment,
-.hljs-quote {
-  color: #676b79;
-  font-style: italic;
-}
-
-.hljs-params {
-  color: #676b79;
-}
-
-.hljs-punctuation,
-.hljs-attr {
-  color: #2a2c2d;
-}
-
-.hljs-selector-tag,
-.hljs-name,
-.hljs-meta,
-.hljs-operator,
-.hljs-char.escape_ {
-  color: #c56200;
-}
-
-.hljs-keyword,
 .hljs-deletion {
-  color: #d92792;
+  /* prettylights-syntax-markup-deleted */
+  color: #b31d28;
+  background-color: #ffeef0;
 }
 
-.hljs-regexp,
-.hljs-selector-pseudo,
-.hljs-selector-attr,
-.hljs-variable.language_ {
-  color: #cc5e91;
-}
-
-.hljs-subst,
-.hljs-property,
-.hljs-code,
-.hljs-formula,
-.hljs-section,
-.hljs-title.function_ {
-  color: #3787c7;
-}
-
-.hljs-string,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-addition,
-.hljs-selector-class,
-.hljs-title.class_,
-.hljs-title.class_.inherited__,
-.hljs-meta .hljs-string {
-  color: #0d7d6c;
-}
-
-.hljs-variable,
-.hljs-template-variable,
-.hljs-number,
-.hljs-literal,
-.hljs-type,
+.hljs-char.escape_,
 .hljs-link,
-.hljs-built_in,
-.hljs-title,
-.hljs-selector-id,
-.hljs-tag,
-.hljs-doctag,
-.hljs-attribute,
-.hljs-template-tag,
-.hljs-meta .hljs-keyword {
-  color: #7641bb;
+.hljs-params,
+.hljs-property,
+.hljs-punctuation,
+.hljs-tag {
+  /* purposely ignored */
+  color: #6a737d;
 }
