--- a/frontend/src/app/main/ui/viewer/inspect/code.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/code.scss
@@ -7,6 +7,12 @@
 @import "refactor/common-refactor.scss";
 
 .element-options {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  padding-bottom: $s-16;
+
   .attributes-block {
     .download-button {
       @extend .button-secondary;
@@ -17,16 +23,28 @@
     }
   }
   .code-block {
-    font-size: $fs-14;
+    @include codeTypography;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    height: 100%;
+    min-height: 0;
+    overflow: hidden;
     padding: 0 $s-4 $s-8 0;
 
     pre {
       border-radius: $br-8;
-      border: $s-1 solid $db-secondary;
       padding: $s-16;
+      max-height: var(--code-height);
+      overflow: auto;
+      height: 100%;
+    }
+
+    // Overrides background setted in the theme
+    :global(.hljs) {
+      background: $db-tertiary;
     }
   }
-
   .code-row-lang {
     display: flex;
     justify-content: space-between;
@@ -61,7 +79,10 @@
     color: var(--menu-foreground-color-disabled);
   }
   .code-row-display {
-    margin-bottom: $s-8;
+    flex: 1;
+    min-height: 0;
+    overflow: hidden;
+    padding-bottom: $s-8;
   }
 }
 
