:bug: Fix tutorial button style

--- a/frontend/resources/styles/common/refactor/common-dashboard.scss
+++ b/frontend/resources/styles/common/refactor/common-dashboard.scss
@@ -157,6 +157,8 @@
 .btn-primary {
   @extend .button-primary;
   text-transform: uppercase;
+  font-size: $fs-14;
+  font-weight: $fw400;
 }
 
 .btn-secondary {
