--- a/frontend/src/app/main/ui/workspace/left_header.scss
+++ b/frontend/src/app/main/ui/workspace/left_header.scss
@@ -93,7 +93,9 @@
       cursor: pointer;
     }
     .separator {
-      height: $s-12;
+      margin-top: $s-8;
+      height: $s-4;
+      border-top: 1px solid $db-secondary;
     }
     .shortcut {
       @extend .shortcut;
