:bug: fix line-height and color of the message text in all modals

--- a/frontend/src/app/main/ui/alert.scss
+++ b/frontend/src/app/main/ui/alert.scss
@@ -26,10 +26,7 @@
     .modal-content {
       @include titleTipography;
       margin-bottom: $s-24;
-      .modal-msg,
-      .modal-scd-msg,
-      .modal-hint,
-      .modal-subtitle {
+      .modal-hint {
         @include titleTipography;
       }
     }
@@ -48,4 +45,12 @@
       }
     }
   }
+}
+
+.modal-scd-msg,
+.modal-subtitle,
+.modal-msg {
+  @include titleTipography;
+  color: var(--modal-text-foreground-color);
+  line-height: 1.5;
 }
