:lipstick: Fix some frontend bugs

--- a/frontend/resources/styles/common/refactor/color-defs.scss
+++ b/frontend/resources/styles/common/refactor/color-defs.scss
@@ -25,7 +25,8 @@
   --dark-ok-color: var(--strong-green);
   --dark-warning-color: #ff6432;
   --dark-pending-color: var(--lilac);
-  --dark-error-color: #ec1f1f;
+  --dark-error-color: #ff3277;
+  --default-presence-color: #dee563;
 
   // LIGHT
   --light-gray-1: #fff;
