--- a/frontend/src/app/main/ui/dashboard/sidebar.scss
+++ b/frontend/src/app/main/ui/dashboard/sidebar.scss
@@ -220,6 +220,7 @@
       .team-icon {
         &.new-team {
           background-color: $da-primary;
+          color: $db-primary;
           svg {
             fill: $db-secondary;
           }
