--- a/frontend/src/app/main/ui/workspace/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar.scss
@@ -32,8 +32,8 @@ $width-settings-bar-max: $s-500;
     left: 0;
     width: 100%;
     height: $s-12;
-    border-top: 2px solid var(--color-background-quaternary);
-    background-color: var(--color-background-primary);
+    border-top: $s-2 solid var(--resize-area-border-color);
+    background-color: var(--resize-area-background-color);
     cursor: ns-resize;
   }
   .settings-bar-inside {
@@ -54,7 +54,7 @@ $width-settings-bar-max: $s-500;
   }
 }
 .tab-spacing {
-  margin: $s-4 $s-12 0 $s-12;
+  margin: $s-4 $s-8 0 $s-8;
 }
 .right-settings-bar {
   grid-area: right-sidebar;
