--- a/frontend/src/app/main/ui/workspace/libraries.scss
+++ b/frontend/src/app/main/ui/workspace/libraries.scss
@@ -119,15 +119,15 @@
                 height: $s-32;
                 border-radius: $br-8;
                 margin-right: $s-2;
+                padding: $s-8;
+                width: $s-32;
+                margin-left: $s-8;
                 svg {
                   @extend .button-icon;
                   stroke: var(--icon-foreground);
                 }
               }
-              .item-button-shared {
-                padding: $s-8;
-                width: $s-32;
-              }
+
               .item-button-icon {
                 width: $s-28;
                 height: $s-28;
