--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/constraints.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/constraints.scss
@@ -7,6 +7,7 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-set-content {
     display: flex;
     gap: $s-4;
