--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
@@ -7,9 +7,11 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-title {
     .title-spacing-export {
-      padding-left: $s-12;
+      padding-left: $s-2;
+      margin: 0;
     }
     .add-export {
       @extend .button-tertiary;
@@ -22,7 +24,7 @@
   }
   .element-set-content {
     @include flexColumn;
-    margin-bottom: $s-4;
+    margin: $s-4 0 $s-8 0;
     .multiple-exports {
       @include flexRow;
       .label {
