--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/fill.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/fill.scss
@@ -7,9 +7,12 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-title {
+    margin: 0;
     .title-spacing-fill {
-      padding-left: $s-12;
+      padding-left: $s-2;
+      margin: 0;
     }
     .add-fill {
       @extend .button-tertiary;
@@ -24,6 +27,7 @@
     display: flex;
     flex-direction: column;
     gap: $s-12;
+    margin: $s-4 0 $s-8 0;
     .element-set-options-group {
       @include flexRow;
       .group-label {
@@ -40,9 +44,14 @@
     }
     .checkbox {
       @extend .input-checkbox;
-      margin-bottom: $s-8;
-      margin-top: calc(-1 * $s-4);
       padding-left: $s-8;
+      span.checked {
+        background-color: var(--input-border-color-active);
+        svg {
+          @extend .button-icon-small;
+          stroke: var(--input-details-color);
+        }
+      }
     }
   }
 }
