--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
@@ -7,8 +7,10 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .title-spacing-board-grid {
-    padding-left: $s-12;
+    padding-left: $s-2;
+    margin: 0;
   }
   .add-grid {
     @extend .button-tertiary;
@@ -20,6 +22,7 @@
   }
   .element-set-content {
     @include flexColumn;
+    margin: $s-4 0 $s-8 0;
     .grid-option {
       .grid-title {
         @include flexRow;
