--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -7,9 +7,11 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-title {
     .title-spacing-layout {
-      padding-left: $s-12;
+      padding-left: $s-2;
+      margin: 0;
     }
 
     .title-actions {
@@ -36,6 +38,7 @@
     }
   }
   .flex-layout-menu {
+    margin-bottom: $s-8;
     .first-row {
       display: flex;
       gap: $s-4;
