--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -7,12 +7,13 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-title {
     .title-spacing-layout-element {
       margin: 0 0 $s-4 0;
     }
     .title-spacing-empty {
-      padding-left: $s-12;
+      padding-left: $s-2;
     }
   }
   .flex-element-menu {
@@ -62,6 +63,7 @@
     .position-options {
       width: $s-188;
     }
+
     .margin-row {
       display: flex;
       align-items: flex-start;
