--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/svg_attrs.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/svg_attrs.scss
@@ -7,12 +7,14 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .title-spacing-svg-attrs {
-    padding-left: $s-12;
+    padding-left: $s-2;
+    margin: 0;
   }
   .element-set-content {
     @include flexColumn;
-
+    margin: $s-4 0 0 0;
     .attr-content {
       display: flex;
       gap: $s-4;
