--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/text.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/text.scss
@@ -7,7 +7,9 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  margin: 0;
   .element-title {
+    margin: 0;
     .add-typography {
       @extend .button-tertiary;
       height: $s-32;
@@ -19,6 +21,7 @@
   }
   .element-content {
     @include flexColumn;
+    margin-top: $s-4;
     .multiple-typography {
       @extend .mixed-bar;
       .multiple-text {
