--- a/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
@@ -12,18 +12,19 @@
   flex-direction: column;
   flex: 1;
   width: 100%;
-  height: var(--height, 200px);
+  height: var(--height, $s-200);
   .title-bar {
     .title {
       margin-left: $s-2;
+      color: var(--title-foreground-color-hover);
     }
   }
 
   .add-page {
     @extend .button-tertiary;
     height: $s-32;
-    width: calc($s-24 + $s-4);
-    margin-right: $s-8;
+    width: $s-28;
+    margin-right: $s-12;
     padding: 0;
     border-radius: $br-8;
     svg {
@@ -37,7 +38,7 @@
     @include titleTipography;
     height: $s-20;
     padding: $s-4 $s-6;
-    border: 1px solid var(--tag-background-color);
+    border: $s-1 solid var(--tag-background-color);
     border-radius: $br-6;
     color: var(--tag-background-color);
   }
@@ -47,11 +48,11 @@
     left: 0;
     width: 100%;
     height: $s-12;
-    border-top: 2px solid var(--color-background-secondary);
-    background-color: var(--color-background-primary);
+    border-top: $s-2 solid var(--resize-area-border-color);
+    background-color: var(--resize-area-background-color);
     cursor: ns-resize;
     &:hover {
-      border-color: var(--color-background-quaternary);
+      border-color: var(--resize-area-border-color);
     }
   }
   .tool-window-content {
@@ -61,7 +62,7 @@
     overflow-x: hidden;
     scrollbar-gutter: stable;
     overflow-y: overlay;
-    height: calc(-38px + var(--height, 200px));
+    height: calc(-38px + var(--height, $s-200));
     width: 100%;
 
     .pages-list {
@@ -74,13 +75,13 @@
         width: 100%;
         cursor: pointer;
         &.dnd-over-top {
-          border-top: 1px solid var(--layer-row-foreground-color-drag);
+          border-top: $s-1 solid var(--layer-row-foreground-color-drag);
         }
         &.dnd-over-bot {
-          border-bottom: 1px solid var(--layer-row-foreground-color-drag);
+          border-bottom: $s-1 solid var(--layer-row-foreground-color-drag);
         }
         .dnd-over > .element-list-body {
-          border: 1px solid var(--layer-row-foreground-color-drag);
+          border: $s-1 solid var(--layer-row-foreground-color-drag);
         }
         .element-list-body {
           display: flex;
@@ -232,5 +233,6 @@
   }
   .title-spacing-sitemap {
     padding-left: $s-8;
+    margin-top: $s-8;
   }
 }
