--- a/frontend/resources/styles/main/partials/sidebar-sitemap.scss
+++ b/frontend/resources/styles/main/partials/sidebar-sitemap.scss
@@ -4,136 +4,7 @@
 //
 // Copyright (c) KALEIDOS INC
 
-#sitemap,
-.sitemap {
-  height: var(--height, 200px);
-
-  .element-list,
-  .pages-list {
-    li {
-      align-items: center;
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-
-      .page-icon {
-        svg {
-          fill: $color-gray-30;
-          height: 13px;
-          margin-right: $size-1;
-          width: 13px;
-        }
-      }
-
-      span {
-        color: $color-gray-20;
-        font-size: $fs12;
-        max-width: 75%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      .page-actions {
-        align-items: center;
-        display: none;
-        margin-left: auto;
-
-        button {
-          border: none;
-          background-color: transparent;
-          svg {
-            fill: $color-gray-60;
-            height: 15px;
-            margin-left: $size-1;
-            width: 15px;
-          }
-        }
-      }
-
-      &:hover {
-        background-color: $color-primary;
-
-        .page-icon {
-          svg {
-            fill: $color-gray-60;
-          }
-
-          span {
-            color: $color-gray-60;
-          }
-        }
-
-        .page-actions {
-          display: flex;
-        }
-      }
-
-      &.selected {
-        .page-icon {
-          svg {
-            fill: $color-primary;
-          }
-        }
-
-        span {
-          color: $color-primary;
-        }
-      }
-
-      &:hover {
-        .page-icon {
-          svg {
-            fill: $color-gray-60;
-          }
-        }
-
-        span {
-          color: $color-gray-60;
-        }
-      }
-    }
-
-    .element-list-body {
-      align-items: center;
-      display: flex;
-      padding: $size-1 $size-2;
-      transition: none;
-      width: 100%;
-
-      svg {
-        fill: $color-gray-60;
-        height: 13px;
-        margin-right: 8px;
-        width: 13px;
-      }
-
-      .element-actions {
-        align-items: center;
-        display: flex;
-        flex-shrink: 0;
-        width: 62px;
-      }
-
-      &.dragging {
-        // TODO: revisit this
-        background-color: $color-gray-10;
-      }
-    }
-  }
-
-  & .resize-area {
-    position: absolute;
-    width: 100%;
-    height: 16px;
-    bottom: -8px;
-    left: 0;
-    cursor: ns-resize;
-  }
-}
-
-.add-page,
-.collapse-pages {
+.add-page {
   align-items: center;
   background-color: transparent;
   border-radius: $br3;
@@ -214,13 +85,5 @@
 
   .add-page {
     margin: 0;
-  }
-}
-
-.collapse-pages {
-  margin-left: $size-2;
-
-  svg {
-    transform: rotate(90deg);
   }
 }
