--- a/frontend/resources/styles/main/partials/sidebar.scss
+++ b/frontend/resources/styles/main/partials/sidebar.scss
@@ -24,8 +24,7 @@
     grid-template-rows: 100%;
     height: calc(100% - 2px);
 
-    .tool-window,
-    .sitemap {
+    .tool-window {
       position: relative;
       border-bottom: 1px solid $color-gray-60;
       display: flex;
