:recycle: Remove new-css-system from layers

--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -17,6 +17,9 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
+  background-color: red; //debugger colors
+  color: #fabada; //debugger colors
 }
 
 #app {
