--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -162,10 +162,11 @@
   --input-checkbox-background-color-intermediate: var(--color-foreground-secondary);
 
   // Checkbox color
-  --input-checkbox-inactive-background-color: var(--off-white);
+  --input-checkbox-inactive-background-color: var(--color-foreground-secondary);
   --input-checkbox-inactive-foreground-color: var(--color-background-primary);
   --input-checkbox-active-background-color: var(--color-accent-primary);
   --input-checkbox-active-foreground-color: var(--color-background-primary);
+  --input-checkbox-text-foreground-color: var(--color-foreground-secondary);
 
   --menu-background-color: var(--color-background-tertiary);
   --menu-foreground-color: var(--color-foreground-primary);
