--- a/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
@@ -12,7 +12,7 @@
   align-items: center;
   width: 100%;
   background-color: var(--layer-row-background-color);
-  border: 2px solid transparent;
+  border: $s-2 solid transparent;
 
   &.highlight,
   &:hover {
@@ -20,7 +20,7 @@
     --context-hover-opacity: $op-10;
     background-color: var(--layer-row-background-color-hover);
     color: var(--layer-row-foreground-color-hover);
-    box-shadow: $s-16 0px 0px 0px var(--layer-row-background-color-hover);
+    box-shadow: $s-16 $s-0 $s-0 $s-0 var(--layer-row-background-color-hover);
     &.hidden {
       opacity: $op-10;
     }
@@ -28,7 +28,7 @@
 
   &.selected {
     background-color: var(--layer-row-background-color-selected);
-    box-shadow: $s-16 0px 0px 0px var(--layer-row-background-color-selected);
+    box-shadow: $s-16 $s-0 $s-0 $s-0 var(--layer-row-background-color-selected);
   }
 
   &.selected.highlight,
@@ -105,7 +105,6 @@
   @include buttonStyle;
   position: relative;
   justify-self: flex-end;
-  width: $s-16;
   height: 100%;
   width: $s-24;
   padding: 0 $s-8 0 $s-4;
@@ -138,23 +137,23 @@
 .absolute {
   position: absolute;
   background-color: var(--layer-row-foreground-color);
-  opacity: $op-4;
-  width: $s-12;
   height: $s-12;
+  width: $s-12;
   border-radius: $br-2;
+  opacity: $op-4;
 
-  .layer-row.hidden & {
+  .layer-row.hidden {
     opacity: $op-1;
   }
-  .layer-row.type-comp & {
+  .layer-row.type-comp {
     background-color: var(--layer-row-component-foreground-color);
   }
-  .layer-row.highlight &,
-  .layer-row:hover & {
+  .layer-row.highlight,
+  .layer-row:hover {
     opacity: $op-4;
     background-color: var(--layer-row-foreground-color-hover);
   }
-  .layer-row.selected & {
+  .layer-row.selected {
     background-color: var(--layer-row-foreground-color-selected);
   }
 }
@@ -166,29 +165,29 @@
   align-items: center;
   height: 100%;
   width: $s-24;
-  padding: 0 4px 0 8px;
+  padding: 0 $s-4 0 $s-8;
 
   svg {
     @extend .button-icon-small;
     stroke: var(--icon-foreground);
 
-    .layer-row.hidden & {
+    .layer-row.hidden {
       opacity: $op-7;
     }
-    .layer-row.selected & {
+    .layer-row.selected {
       stroke: var(--layer-row-foreground-color-selected);
     }
-    .layer-row.type-comp & {
+    .layer-row.type-comp {
       stroke: var(--layer-row-component-foreground-color);
     }
-    .layer-row.highlight &,
-    .layer-row:hover & {
+    .layer-row.highlight,
+    .layer-row:hover {
       opacity: $op-10;
       stroke: var(--layer-row-foreground-color-hover);
     }
   }
 
-  .layer-row.selected & {
+  .layer-row.selected {
     background-color: var(--layer-row-background-color-selected);
   }
   &.inverse svg {
@@ -209,15 +208,15 @@
     @extend .button-icon-small;
     stroke: var(--icon-foreground);
 
-    .layer-row.hidden & {
+    .layer-row.hidden {
       opacity: $op-7;
     }
-    .type-comp & {
+    .type-comp {
       stroke: var(--layer-row-component-foreground-color);
     }
   }
 
-  .element-actions.selected & {
+  .element-actions.selected {
     display: flex;
     opacity: $op-0;
 
@@ -226,15 +225,16 @@
     }
   }
 
-  .layer-row.highlight &,
-  .layer-row:hover & {
+  .layer-row.highlight,
+  .layer-row:hover {
     display: flex;
     svg {
       opacity: $op-10;
       stroke: var(--layer-row-foreground-color-hover);
     }
   }
-  .layer-row.selected & {
+
+  .layer-row.selected {
     display: flex;
     svg {
       stroke: var(--layer-row-foreground-color-selected);
@@ -244,8 +244,8 @@
 
 :global(.sticky) {
   position: sticky;
-  top: 0px;
-  z-index: 3;
+  top: $s-0;
+  z-index: $z-index-3;
 }
 
 .tab-indentation {
@@ -253,6 +253,7 @@
   height: $s-16;
   min-width: calc(var(--depth) * var(--layer-indentation-size));
 }
+
 .filtered {
   min-width: $s-12;
 }
