--- a/frontend/src/app/main/ui/workspace/right_header.scss
+++ b/frontend/src/app/main/ui/workspace/right_header.scss
@@ -13,206 +13,218 @@
   padding: $s-8;
   gap: $s-8;
   background-color: var(--panel-background-color);
-  .users-section {
-    position: relative;
-    min-width: $s-32;
-    max-width: $s-72;
-    padding: $s-4 $s-6;
-  }
-  .separator {
-    flex: 1;
-  }
-  .zoom-section {
-    .zoom-widget {
-      @include buttonStyle;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: $s-28;
-      max-width: $s-48;
-      width: $s-48;
-      border-radius: $br-8;
-      .label {
-        @include titleTipography;
-        color: var(--button-tertiary-foreground-color-rest);
-      }
+}
 
-      &:hover {
-        .label {
-          color: var(--button-tertiary-foreground-color-focus);
-        }
-      }
-      &.selected {
-        .label {
-          color: var(--button-tertiary-foreground-color-focus);
-        }
-      }
-    }
-    .dropdown {
-      @extend .menu-dropdown;
-      right: $s-2;
-      top: calc($s-2 + $s-48);
-      width: $s-272;
-      .basic-zoom-bar {
-        display: flex;
-        justify-content: space-between;
-        padding: $s-6;
-        cursor: auto;
-        .zoom-btns {
-          display: flex;
-          .zoom-btn {
-            @extend .button-tertiary;
-            height: $s-28;
-            width: $s-28;
-            border-radius: $br-8;
-            .zoom-icon {
-              @include flexCenter;
-              svg {
-                @extend .button-icon;
-                stroke: var(--icon-foreground);
-              }
-            }
-            &:hover {
-              .zoom-icon svg {
-                stroke: var(--button-tertiary-foreground-color-hover);
-              }
-            }
-          }
-          .zoom-text {
-            @include flexCenter;
-            height: 100%;
-            min-width: $s-48;
-            padding: 0;
-            margin: 0 $s-2;
-            color: var(--modal-title-foreground-color);
-          }
-        }
-        .reset-btn {
-          @extend .button-tertiary;
-          color: var(--button-tertiary-foreground-color-hover);
-          height: $s-28;
-          border-radius: $br-8;
-        }
-      }
-      .zoom-option {
-        @extend .menu-item;
-        .shortcuts {
-          @extend .shortcut;
-          .shortcut-key {
-            @extend .shortcut-key;
-          }
-        }
-        &:hover {
-          color: var(--menu-foreground-color-hover);
-          .shortcuts {
-            .shortcut-key {
-              color: var(--menu-foreground-color-hover);
-            }
-          }
-        }
-      }
+.users-section {
+  position: relative;
+  min-width: $s-32;
+  max-width: $s-72;
+  padding: $s-4 $s-6;
+}
+
+.separator {
+  flex: 1;
+}
+
+.zoom-widget {
+  @include buttonStyle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: $s-28;
+  max-width: $s-48;
+  width: $s-48;
+  border-radius: $br-8;
+  .label {
+    @include titleTipography;
+    color: var(--button-tertiary-foreground-color-rest);
+  }
+
+  &:hover {
+    .label {
+      color: var(--button-tertiary-foreground-color-focus);
     }
   }
-  .comments-section {
-    .comments-btn {
-      @extend .button-tertiary;
-      border-radius: $br-8;
-      margin: 0;
-      height: $s-28;
-      width: $s-28;
-      svg {
-        @extend .button-icon;
-        stroke: var(--icon-foreground);
-        height: $s-16;
-        width: $s-16;
-      }
-      &:hover {
-        background-color: transparent;
-        border: none;
-      }
-      &.selected {
-        background-color: var(--button-tertiary-background-color-selected);
-        border: $s-2 solid var(--button-tertiary-border-color-selected);
-        svg {
-          stroke: var(--button-tertiary-foreground-color-active);
-        }
-      }
+  &.selected {
+    .label {
+      color: var(--button-tertiary-foreground-color-focus);
     }
   }
-  .history-section {
-    .history-button {
-      @extend .button-tertiary;
-      border-radius: $br-8;
-      margin: 0;
-      height: $s-28;
-      width: $s-28;
-      svg {
-        @extend .button-icon;
-        stroke: var(--icon-foreground);
-        height: $s-16;
-        width: $s-16;
-      }
-      &:hover {
-        background-color: transparent;
-        border: none;
-      }
-      &.selected {
-        background-color: var(--button-tertiary-background-color-selected);
-        border: $s-2 solid var(--button-tertiary-border-color-selected);
-        svg {
-          stroke: var(--button-tertiary-foreground-color-active);
-        }
-      }
-    }
-  }
-  .persistence-status-widget {
+}
+
+.dropdown {
+  @extend .menu-dropdown;
+  right: $s-2;
+  top: calc($s-2 + $s-48);
+  width: $s-272;
+}
+
+.basic-zoom-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: $s-6;
+  cursor: auto;
+}
+
+.zoom-btns {
+  display: flex;
+}
+
+.zoom-btn {
+  @extend .button-tertiary;
+  height: $s-28;
+  width: $s-28;
+  border-radius: $br-8;
+  .zoom-icon {
     @include flexCenter;
-    width: $s-28;
-    height: $s-28;
-    .status-icon {
-      @include flexCenter;
-      margin: 0;
-      width: $s-16;
-      height: $s-16;
-      border-radius: $br-circle;
-      svg {
-        @extend .button-icon;
-        height: $s-12;
-        width: $s-12;
-        stroke: var(--status-icon-foreground-color);
-      }
-    }
-    .pending-status {
-      background-color: var(--status-warning-background-color);
-    }
-    .saving-status {
-      background-color: var(--status-pending-background-color);
-      svg {
-        animation: spin-animation 1s infinite;
-        animation-timing-function: linear;
-      }
-    }
-    .saved-status {
-      background-color: var(--status-ok-background-color);
-    }
-    .error-status {
-      background-color: var(--status-error-background-color);
-    }
-  }
-  .viewer-btn {
-    @extend .button-tertiary;
-    border-radius: $br-8;
-    margin: 0;
-    width: $s-28;
-    height: $s-28;
     svg {
       @extend .button-icon;
       stroke: var(--icon-foreground);
-      height: $s-16;
-      width: $s-16;
     }
-    &:hover {
-      background-color: transparent;
+  }
+  &:hover {
+    .zoom-icon svg {
+      stroke: var(--button-tertiary-foreground-color-hover);
     }
+  }
+}
+
+.zoom-text {
+  @include flexCenter;
+  height: 100%;
+  min-width: $s-48;
+  padding: 0;
+  margin: 0 $s-2;
+  color: var(--modal-title-foreground-color);
+}
+
+.reset-btn {
+  @extend .button-tertiary;
+  color: var(--button-tertiary-foreground-color-hover);
+  height: $s-28;
+  border-radius: $br-8;
+}
+.zoom-option {
+  @extend .menu-item-base;
+  .shortcuts {
+    @extend .shortcut-base;
+    .shortcut-key {
+      @extend .shortcut-key-base;
+    }
+  }
+  &:hover {
+    color: var(--menu-foreground-color-hover);
+    .shortcuts {
+      .shortcut-key {
+        color: var(--menu-foreground-color-hover);
+      }
+    }
+  }
+}
+
+.comments-btn {
+  @extend .button-tertiary;
+  border-radius: $br-8;
+  margin: 0;
+  height: $s-28;
+  width: $s-28;
+  svg {
+    @extend .button-icon;
+    stroke: var(--icon-foreground);
+    height: $s-16;
+    width: $s-16;
+  }
+  &:hover {
+    background-color: transparent;
+    border: none;
+  }
+  &.selected {
+    background-color: var(--button-tertiary-background-color-selected);
+    border: $s-2 solid var(--button-tertiary-border-color-selected);
+    svg {
+      stroke: var(--button-tertiary-foreground-color-active);
+    }
+  }
+}
+
+.history-button {
+  @extend .button-tertiary;
+  border-radius: $br-8;
+  margin: 0;
+  height: $s-28;
+  width: $s-28;
+  svg {
+    @extend .button-icon;
+    stroke: var(--icon-foreground);
+    height: $s-16;
+    width: $s-16;
+  }
+  &:hover {
+    background-color: transparent;
+    border: none;
+  }
+  &.selected {
+    background-color: var(--button-tertiary-background-color-selected);
+    border: $s-2 solid var(--button-tertiary-border-color-selected);
+    svg {
+      stroke: var(--button-tertiary-foreground-color-active);
+    }
+  }
+}
+
+.persistence-status-widget {
+  @include flexCenter;
+  width: $s-28;
+  height: $s-28;
+}
+
+.status-icon {
+  @include flexCenter;
+  width: $s-16;
+  height: $s-16;
+  margin: 0;
+  border-radius: $br-circle;
+  svg {
+    @extend .button-icon;
+    height: $s-12;
+    width: $s-12;
+    stroke: var(--status-icon-foreground-color);
+  }
+}
+
+.pending-status {
+  background-color: var(--status-warning-background-color);
+}
+
+.saving-status {
+  background-color: var(--status-pending-background-color);
+  svg {
+    animation: spin-animation 1s infinite;
+    animation-timing-function: linear;
+  }
+}
+
+.saved-status {
+  background-color: var(--status-ok-background-color);
+}
+
+.error-status {
+  background-color: var(--status-error-background-color);
+}
+
+.viewer-btn {
+  @extend .button-tertiary;
+  border-radius: $br-8;
+  margin: 0;
+  width: $s-28;
+  height: $s-28;
+  svg {
+    @extend .button-icon;
+    height: $s-16;
+    width: $s-16;
+    stroke: var(--icon-foreground);
+  }
+  &:hover {
+    background-color: transparent;
   }
 }
